--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,18 @@
 {
   "extends": ["eslint:recommended", 
+    "plugin:import/errors",
+    "plugin:react/recommended",
+    "plugin:jsx-a11y/recommended",
     "prettier", 
     "prettier/react"
   ],
-  "plugins": [],
+  "rules": {
+    "react/prop-types": 0, // turn off
+    "no-console": 1, //warn
+    "react-hooks/rules-of-hooks": 2, // error
+    "react-hooks/exhaustive-deps": 1
+  },
+  "plugins": ["react", "import", "jsx-a11y", "react-hooks"],
   "parserOptions": {
     "ecmaVersion": 2018, 
     "sourceType": "module",
@@ -15,5 +24,10 @@
     "es6": true,
     "browser": true,
     "node": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
